--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 # Moroccan Finance Scraper Dependencies
-# Last updated: 2026-01-11
+# Last updated: 2026-01-24
 
 requests>=2.32.0,<3.0.0
 beautifulsoup4>=4.12.0,<5.0.0
+PyYAML>=6.0.0,<7.0.0
